--- a/about.html
+++ b/about.html
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Bootstrap Demo</title>
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- font awesome -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 
 </head>
 <body>
+<div class="container">
 	<nav class="navbar navbar-default" role="navigation">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
@@ -26,32 +27,11 @@
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="week1.html">Week 1</a></li>
-				<li><a href="week2.html">Week 2</a></li>
-				<li class="active"><a href="about.html">Contact</a></li>
-			</ul>
-			<form class="navbar-form navbar-left" role="search">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Type here...">
-				</div>
-				<button type="submit" class="btn btn-default">Submit</button>
-			</form>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Link</a></li>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a href="#">Action</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
-						<li><a href="#">Separated link</a></li>
-					</ul>
-				</li>
+				<li class="active"><a href="about.html">Contact Us</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</nav>
 
-<div class="container">
 	<h3>Contact Us</h3>
 
 	<p>Phone:</p>
@@ -82,14 +62,13 @@
 	<a href="market:https://play.google.com/store/apps/details?id=com.rovio.angrybirds">
 	<span class="fa fa-stack fa-3x text-danger">
 		<i class="fa fa-circle fa-stack-2x"></i>
-		<i class="fa fa-play   fa-stack-1x fa-inverse"></i>
-		
+		<i class="fa fa-play   fa-stack-1x fa-inverse"></i>	
 	</span>
 	</a>
-</div>
+</div> <!-- end of container -->
 
 <!-- Latest compiled and minified JS -->
-	<script src="http://code.jquery.com/jquery.js"></script>
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>	
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>	
 </body>
 </html>
