--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Dashboard</title>
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 
 </head>
 <body>
@@ -24,21 +24,27 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="about.html">Contact Us</a></li>
+
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</nav>
-<div class="row text-center">
-	<div class="col-md-6 col-md-offset-3">
-		<button type="button" class="btn btn-success btn-lg">
-			Foo
-			</button>
-	</div>
-</div>
-
-</div>
-
+	<div class="row text-center">
+		<div class="col-md-6 col-md-offset-3">
+		<form action="about.html">
+				<button type="button" class="btn btn-success btn-lg" id="navButton">
+				Foo
+				</button>
+		</form>
+		</div>
+	</div> <!-- end of row -->
+</div> <!-- end of container -->
+<script>
+	document.getElementById("navButton").onclick = function (){
+		location.href = "about.html"
+	};
+</script>
 <!-- Latest compiled and minified JS -->
-	<script src="http://code.jquery.com/jquery.js"></script>
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>	
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>	
 </body>
 </html>
