geo works but not market

--- a/about.html
+++ b/about.html
@@ -59,10 +59,18 @@
 	</a>
 
 	<p>App Store</p>
-	<a href="market:https://play.google.com/store/apps/details?id=com.rovio.angrybirds">
+	<a href="market:details?id=com.rovio.angrybirds">
 	<span class="fa fa-stack fa-3x text-danger">
 		<i class="fa fa-circle fa-stack-2x"></i>
 		<i class="fa fa-play   fa-stack-1x fa-inverse"></i>	
+	</span>
+	</a>
+
+	<p>In The Real World</p>
+	<a href="geo:53.3597, -6.3174">
+	<span class="fa fa-stack fa-3x text-active">
+		<i class="fa fa-circle     fa-stack-2x"></i>
+		<i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>	
 	</span>
 	</a>
 </div> <!-- end of container -->
