--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="col-md-6 col-md-offset-3">
 		<form action="about.html">
 				<button type="button" class="btn btn-success btn-lg" id="navButton">
-				Foo
+				Contact Us Dashboard
 				</button>
 		</form>
 		</div>
